# flutter_ffi_demo

./: README.md  pubspec.yaml
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/scanbot/sdk/flutter/demo/flutter_ffi_demo/: FlutterFfiDemoPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/scanbot/sdk/flutter/demo/flutter_ffi_demo_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/: Podfile
example/ios/Flutter/: AppFrameworkInfo.plist
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: camera_demo.dart  live_processing.dart  main.dart
example/test/: widget_test.dart
ios/: .gitignore  flutter_ffi_demo.podspec
ios/Classes/: FlutterFfiDemoPlugin.h  FlutterFfiDemoPlugin.m  SwiftFlutterFfiDemoPlugin.swift
lib/: camera_preview.dart  flutter_ffi_demo.dart
lib/face_detector/: face_detector.dart
lib/live_detect/: live_detect.dart
lib/shape_detector/: opencv_shape_datector_frame_handler.dart  shape_detector.dart
lib/src/: extensions.dart
lib/src/ffi/: ffi_lookup.dart
lib/src/models/: image.dart
src/: CMakeLists.txt  prebuild.sh
src/android/: .gitignore  CMakeLists.txt  build.sh
src/android/opencv-build/: .gitignore  build-openjpeg.sh  build.sh  publish.sh
src/android/openssl/: build-deps.sh
src/ios/: CMakeLists.txt  build.sh
src/ios/opencv-build/: build.sh
src/umbrella/FaceDetector/: FaceDetector.cpp  FaceDetector.h
src/umbrella/OpenCV/: OpenCvFFI.cpp  OpenCvFFI.h
src/umbrella/ShapeDetector/: ShapeDetector.cpp  ShapeDetector.h
src/umbrella/Utils/: FlutterCVOperations.h  MatUtils.h
test/: flutter_ffi_demo_test.dart
